# model

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
src/apps/docs/: scheme.py  views.py
src/apps/docs/midia/: overview.md
src/conf/: routers.py  settings.py  urls.py
